[gd_scene load_steps=14 format=3 uid="uid://c5bv25uu2jith"]

[ext_resource type="Script" path="res://player/PlayerHUD.gd" id="1_uvdbr"]
[ext_resource type="Texture2D" uid="uid://0wta44t65n7x" path="res://ui/textures/health_bar_background.png" id="2_0ejho"]
[ext_resource type="Texture2D" uid="uid://yfocvi5kr3dt" path="res://ui/textures/stamina_bar_background.png" id="2_3hreg"]
[ext_resource type="Texture2D" uid="uid://dnfojq4svvcxb" path="res://ui/textures/stamina_bar_fill.png" id="3_clxha"]
[ext_resource type="Texture2D" uid="uid://baitnsd857ox7" path="res://ui/textures/health_bar_fill.png" id="4_qxbbk"]
[ext_resource type="Script" path="res://system/utility/VersionText.gd" id="5_2jina"]
[ext_resource type="PackedScene" uid="uid://onydq804bkh3" path="res://ui/scenes/pause_menu.tscn" id="5_kdrak"]
[ext_resource type="Texture2D" uid="uid://oqqxe4cbou2" path="res://ui/textures/minimap_player.png" id="8_f1gxn"]
[ext_resource type="Script" path="res://ui/scripts/Minimap.gd" id="8_ru3fg"]

[sub_resource type="Animation" id="Animation_qs8t6"]
resource_name = "MapToggle"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Minimap:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(50, 40), Vector2(700, 40)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Minimap:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(3, 3)]
}

[sub_resource type="Animation" id="Animation_wlgi6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:tint_over")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Minimap:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(50, 40)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Minimap:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_xmls8"]
resource_name = "stamina_alert_anim"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:tint_over")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ibmmm"]
_data = {
"MapToggle": SubResource("Animation_qs8t6"),
"RESET": SubResource("Animation_wlgi6"),
"stamina_alert_anim": SubResource("Animation_xmls8")
}

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_uvdbr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../StaminaBar")
libraries = {
"": SubResource("AnimationLibrary_ibmmm")
}

[node name="StaminaBar" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.2
offset_left = 14.0
offset_top = 940.0
offset_right = 19.0
offset_bottom = 1068.0
max_value = 1.0
step = 0.0
value = 1.0
texture_under = ExtResource("2_3hreg")
texture_over = ExtResource("2_3hreg")
texture_progress = ExtResource("3_clxha")
texture_progress_offset = Vector2(12.345, 0)
tint_under = Color(0, 0, 0, 1)
tint_over = Color(1, 1, 1, 0)
tint_progress = Color(0.803226, 0.468311, 5.77569e-07, 1)
metadata/_edit_use_anchors_ = true

[node name="HealthBar" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.2
offset_left = 23.0
offset_top = 982.0
offset_right = 151.0
offset_bottom = 1110.0
max_value = 1.0
step = 0.0
value = 1.0
texture_under = ExtResource("2_0ejho")
texture_progress = ExtResource("4_qxbbk")
texture_progress_offset = Vector2(14.83, 0)
tint_under = Color(0, 0, 0, 1)
tint_progress = Color(0.789304, 0, 0.160081, 1)
metadata/_edit_use_anchors_ = true

[node name="PauseMenu" parent="." instance=ExtResource("5_kdrak")]
visible = false
layout_mode = 1
offset_left = 855.0
offset_top = 442.0
offset_right = 855.0
offset_bottom = 442.0

[node name="DeathText" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 828.0
offset_top = 250.0
offset_right = 1097.0
offset_bottom = 387.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 100
text = "DEAD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VersionText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1501.0
offset_top = 1047.0
offset_right = 1901.0
offset_bottom = 1070.0
grow_horizontal = 0
grow_vertical = 0
text = "Version text"
horizontal_alignment = 2
script = ExtResource("5_2jina")

[node name="Minimap" type="Control" parent="."]
clip_contents = true
layout_mode = 2
anchors_preset = 0
offset_left = 50.0
offset_top = 40.0
offset_right = 250.0
offset_bottom = 240.0
script = ExtResource("8_ru3fg")

[node name="MinimapTileHolder" type="Node2D" parent="Minimap"]
scale = Vector2(0.5, 0.5)

[node name="ColorRect" type="ColorRect" parent="Minimap"]
layout_mode = 2
offset_right = 200.0
offset_bottom = 200.0
color = Color(0, 0, 0, 0.117647)

[node name="PlayerIcon" type="TextureRect" parent="Minimap"]
layout_mode = 0
offset_left = 95.0
offset_top = 95.0
offset_right = 105.0
offset_bottom = 105.0
pivot_offset = Vector2(5, 5)
texture = ExtResource("8_f1gxn")
expand_mode = 1

[node name="Menu" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 561.0
offset_top = 182.0
offset_right = 601.0
offset_bottom = 222.0

[node name="MenuBackground" type="ColorRect" parent="Menu"]
layout_mode = 0
offset_left = -11.0
offset_top = 83.0
offset_right = 804.0
offset_bottom = 544.0
color = Color(0.219678, 0.231218, 0.283976, 1)

[node name="MapBackground" type="ColorRect" parent="Menu/MenuBackground"]
layout_mode = 0
offset_left = 29.0
offset_top = 22.0
offset_right = 229.0
offset_bottom = 222.0
color = Color(0.123733, 0.131383, 0.166441, 1)

[node name="MapTileHolder" type="Node2D" parent="Menu/MenuBackground/MapBackground"]
position = Vector2(6, 2)
